# wayfinder

./: Cargo.toml  LICENSE  README.md  build
example/: Cargo.toml  build
example/src/: lib.rs  opt.rs
example/www/: Pose2d.js  PoseTable.js  field.html  field.js  index.html  wayfinder_wasm.js  wayfinder_wasm_bg.wasm
src/: lib.rs
src/math/: mod.rs
src/parameterizer/: cheesy.rs  jaci.rs  mod.rs
src/point/: mod.rs
src/spline/: hermite.rs  mod.rs
src/waypoint/: mod.rs
