[package]
name = "wayfinder-wasm"
version = "0.1.0"
authors = ["Jordan McMichael <jlmcmchl@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0"
wasm-bindgen = {version= "0.2", features=["serde-serialize"] }
serde = "1.0"
wayfinder = { path = "../" }
argmin = { git = "https://github.com/jlmcmchl/argmin.git", branch = "master" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }

nalgebra = { version = "0.24", features=["serde-serialize"] }
